@@ -36,8 +36,9 @@ class TableWriter[T] private (
     "\"" + name + "\""
 
   private lazy val queryTemplateUsingInsert: String = {
-    val columnSpec = columnNames.map(quote).mkString(", ")
-    val valueSpec = columnNames.map(":" + _).mkString(", ")
+    val quotedColumnNames: Seq[String] = columnNames.map(quote)
+    val columnSpec = quotedColumnNames.mkString(", ")
+    val valueSpec = quotedColumnNames.map(":" + _).mkString(", ")
     s"INSERT INTO ${quote(keyspaceName)}.${quote(tableName)} ($columnSpec) VALUES ($valueSpec)"
   }
 
@@ -45,10 +46,11 @@ class TableWriter[T] private (
     val (primaryKey, regularColumns) = columns.partition(_.isPrimaryKeyColumn)
     val (counterColumns, nonCounterColumns) = regularColumns.partition(_.isCounterColumn)
 
-    val setNonCounterColumnsClause = nonCounterColumns.map(_.columnName).map(c => s"${quote(c)} = :$c")
-    val setCounterColumnsClause = counterColumns.map(_.columnName).map(c => s"${quote(c)} = ${quote(c)} + :$c")
+    def quotedColumnNames(columns: Seq[ColumnDef]) = columns.map(_.columnName).map(quote)
+    val setNonCounterColumnsClause = quotedColumnNames(nonCounterColumns).map(c => s"$c = :$c")
+    val setCounterColumnsClause = quotedColumnNames(counterColumns).map(c => s"$c = $c + :$c")
     val setClause = (setNonCounterColumnsClause ++ setCounterColumnsClause).mkString(", ")
-    val whereClause = primaryKey.map(_.columnName).map(c => s"${quote(c)} = :$c").mkString(" AND ")
+    val whereClause = quotedColumnNames(primaryKey).map(c => s"$c = :$c").mkString(" AND ")
 
     s"UPDATE ${quote(keyspaceName)}.${quote(tableName)} SET $setClause WHERE $whereClause"
   }
